--- a/README
+++ b/README
@@ -1,5 +1,33 @@
 
-is bUbBL3scriPt rEady YeT¿‽
+## What is bubblescript?
+
+buBbLescript is a functional programming language written
+in Javascript for javasCript.
+
+Bubblescript is a lisp style language.
+
+Adding two numbers together can be accomplished thusly.
+
+    (+ 2 3)
+
+And the result will of coarse be...
+
+## Inspiration
+
+Bubblescript is inspired by the terrific closure.
+
+A list for drop off by driver.
+
+A list for Java henjago.
+
+A liSp 4 JaVa in jAvA!
+
+Whilst closure is compiled, bubblescript is interpreted.
+
+And will likely stay as such.
+
+
+## is bUbBL3scriPt rEady YeT¿‽
 
 No. we are currently under going refactoring.
 Oh, currently undergoing refactoring will be ready in time and check back for updates.
