--- a/README
+++ b/README
@@ -4,6 +4,11 @@
 buBbLescript is a functional programming language written
 in Javascript for javasCript.
 
+buBBLesCriPt: tHe pOOrmAns sLeDgHaMMer.
+
+"i Us3 MY SleDghAMMer 4 evErytHinG!"
+                         - bAMbi
+
 Bubblescript is a lisp style language.
 
 Adding two numbers together can be accomplished thusly.
