--- a/README
+++ b/README
@@ -1,1 +1,49 @@
+.       .   .   .                       .
+|       |   |   |                 o     |
+|-. . . |-. |-. | ,-. ,-. ,-. ;-. . ;-. |-
+| | | | | | | | | |-' `-. |   |   | | | |
+`-' `-` `-' `-' ' `-' `-' `-' '   ' |-' `-'
 🦔🍬🍬🍬🧹🍎🍦☕️🍫?🍉🍇🍱🍏🥪🍋‍🟩i🍟🥡🪤🍬🍬🍬🦇🌭🍬It🫠👡🍬🍬🍬🥦🍬🥤🐸👡👛🪙Don't🥑🎀🥗🍵🍭🍑🎻🪨🍄🍄🍄🥭🍕🥒🥖🍎🛋🦁🍬🍡🍚🍌🍒🍉🍬🧹🍫📸🩰📸🦜🪷📸🫣🥄🤭🤡🥜🧈🤡🤡💋🫧fg🦗🍓🥜🫐🌈🌼🍭🍕🍦🎱🍬🍬🍬🍬🍬🍬🍬🍬🍬🍯🐝🍬🪅🍬🍬🍬🍬🪇🦔🦦🥔🍅🔧🎶🩱🧄🍇🍍🍊🥜🍫🍬🍬🍬🍬🧹🥕🍬🍬🍬💫🍬🍬🍬🍬🍬🍬🍬🍭.🧆...🍩......gNirtsgeNthOughTn3EdsjUs🪙buiLd-A-🧸...............makingMake🔨⌚️klean🕸youtu.be/6ZktNItwexo🕷🥬nAsTy👦👦👦🤫🌄_🐽💋youtu.be/98OCIRwzHe4🦥improveTheseParseMbXGYVQINd1\eb.utuoy\\:sptthyoUTu.bE/RVbIk8H8twc💬🦌🦬🦌🦌🦬🦌🐎🛒🎅🏿✨️🛒🐎sMokiNg🍔brambatoya🚭use🥧AdDeAtenHaNCE🪄eNhaNce🪄EnhaNc3🪄failingList.createkL3aNfixSettingLimitFixCreatework🐛d3uCeshttps://youtu.be/nbY_aP-alkw🦫🪶🦆🦆🦆🪿moveparser/evaluatorimprovedebugAddpruner3pLsk3tcHadDRemoveexportbr3akiangwoRkn
+                                    '
+      :::::::::  :::    ::: :::::::::  :::::::::  :::        ::::::::::
+     :+:    :+: :+:    :+: :+:    :+: :+:    :+: :+:        :+:
+    +:+    +:+ +:+    +:+ +:+    +:+ +:+    +:+ +:+        +:+
+   +#++:++#+  +#+    +:+ +#++:++#+  +#++:++#+  +#+        +#++:++#
+  +#+    +#+ +#+    +#+ +#+    +#+ +#+    +#+ +#+        +#+
+ #+#    #+# #+#    #+# #+#    #+# #+#    #+# #+#        #+#
+#########   ########  #########  #########  ########## ##########
+      ::::::::   ::::::::  :::::::::  ::::::::::: ::::::::: :::::::::::
+    :+:    :+: :+:    :+: :+:    :+:     :+:     :+:    :+:    :+:
+   +:+        +:+        +:+    +:+     +:+     +:+    +:+    +:+
+  +#++:++#++ +#+        +#++:++#:      +#+     +#++:++#+     +#+
+        +#+ +#+        +#+    +#+     +#+     +#+           +#+
+#+#    #+# #+#    #+# #+#    #+#     #+#     #+#           #+#
+########   ########  ###    ### ########### ###           ###
+
+ o            o     o     o
+O            O     O     O                           o
+O            O     O     o                                     O
+o            o     o     O                                    oOo
+OoOo. O   o  OoOo. OoOo. o  .oOo. .oOo  .oOo  `OoOo. O  .oOo.  o
+ o o o o
+O O O O o
+O O O O O
+o o o O oOo
+OoOo. OoOoOo. OoOo. of .oOo. .oOo .oOo `OoOo. Of .oOo.  o
+O o o O O o O o O OooO' `Ooo. O o o O o O
+o O O o o O o O o O O o O O o O o
+`OoO' `OoO'o `OoO' `OoO' Oo `OoO' `OoO' `OoO' o o' oOoO' `oO
+                                                        O
+                                                        o' 0:w
+
+O   o o   O  O   o O   o O  OooO' `Ooo. O      o     o  O   o  O
+o   O O   o  o   O o   O o  O         O o      O     O  o   O  o
+`OoO' `OoO'o `OoO' `OoO' Oo `OoO' `OoO' `OoO'  o     o' oOoO'  `oO
+                                                        O
+                                                        o'
+
+,-.  .  . .   ,-.  ,    ,--,      ,-.       ;-.  .
+|  ) |  | |   |  ) |      /      /        o |  ) |
+|-<  |  | |-. |-<  |     `.  ,-. |    ;-. . |-'  |-
+|  ) |  | | | |  ) |       ) `-. \    |   | |    |
+`-'  `--` `-' `-'  `--' `-'  `-'  `-' '   ' '    `-'
