--- a/README
+++ b/README
@@ -3,47 +3,22 @@
 |-. . . |-. |-. | ,-. ,-. ,-. ;-. . ;-. |-
 | | | | | | | | | |-' `-. |   |   | | | |
 `-' `-` `-' `-' ' `-' `-' `-' '   ' |-' `-'
-🦔🍬🍬🍬🧹🍎🍦☕️🍫?🍉🍇🍱🍏🥪🍋‍🟩i🍟🥡🪤🍬🍬🍬🦇🌭🍬It🫠👡🍬🍬🍬🥦🍬🥤🐸👡👛🪙Don't🥑🎀🥗🍵🍭🍑🎻🪨🍄🍄🍄🥭🍕🥒🥖🍎🛋🦁🍬🍡🍚🍌🍒🍉🍬🧹🍫📸🩰📸🦜🪷📸🫣🥄🤭🤡🥜🧈🤡🤡💋🫧fg🦗🍓🥜🫐🌈🌼🍭🍕🍦🎱🍬🍬🍬🍬🍬🍬🍬🍬🍬🍯🐝🍬🪅🍬🍬🍬🍬🪇🦔🦦🥔🍅🔧🎶🩱🧄🍇🍍🍊🥜🍫🍬🍬🍬🍬🧹🥕🍬🍬🍬💫🍬🍬🍬🍬🍬🍬🍬🍭.🧆...🍩......gNirtsgeNthOughTn3EdsjUs🪙buiLd-A-🧸...............makingMake🔨⌚️klean🕸youtu.be/6ZktNItwexo🕷🥬nAsTy👦👦👦🤫🌄_🐽💋youtu.be/98OCIRwzHe4🦥improveTheseParseMbXGYVQINd1\eb.utuoy\\:sptthyoUTu.bE/RVbIk8H8twc💬🦌🦬🦌🦌🦬🦌🐎🛒🎅🏿✨️🛒🐎sMokiNg🍔brambatoya🚭use🥧AdDeAtenHaNCE🪄eNhaNce🪄EnhaNc3🪄failingList.createkL3aNfixSettingLimitFixCreatework🐛d3uCeshttps://youtu.be/nbY_aP-alkw🦫🪶🦆🦆🦆🪿moveparser/evaluatorimprovedebugAddpruner3pLsk3tcHadDRemoveexportbr3akiangwoRkn
-                                    '
-      :::::::::  :::    ::: :::::::::  :::::::::  :::        ::::::::::
-     :+:    :+: :+:    :+: :+:    :+: :+:    :+: :+:        :+:
-    +:+    +:+ +:+    +:+ +:+    +:+ +:+    +:+ +:+        +:+
-   +#++:++#+  +#+    +:+ +#++:++#+  +#++:++#+  +#+        +#++:++#
-  +#+    +#+ +#+    +#+ +#+    +#+ +#+    +#+ +#+        +#+
- #+#    #+# #+#    #+# #+#    #+# #+#    #+# #+#        #+#
-#########   ########  #########  #########  ########## ##########
-      ::::::::   ::::::::  :::::::::  ::::::::::: ::::::::: :::::::::::
-    :+:    :+: :+:    :+: :+:    :+:     :+:     :+:    :+:    :+:
-   +:+        +:+        +:+    +:+     +:+     +:+    +:+    +:+
-  +#++:++#++ +#+        +#++:++#:      +#+     +#++:++#+     +#+
-        +#+ +#+        +#+    +#+     +#+     +#+           +#+
-#+#    #+# #+#    #+# #+#    #+#     #+#     #+#           #+#
-########   ########  ###    ### ########### ###           ###
 
- o            o     o     o
-O            O     O     O                           o
-O            O     O     o                                     O
-o            o     o     O                                    oOo
-OoOo. O   o  OoOo. OoOo. o  .oOo. .oOo  .oOo  `OoOo. O  .oOo.  o
- o o o o
-O O O O o
-O O O O O
-o o o O oOo
-OoOo. OoOoOo. OoOo. of .oOo. .oOo .oOo `OoOo. Of .oOo.  o
-O o o O O o O o O OooO' `Ooo. O o o O o O
-o O O o o O o O o O O o O O o O o
-`OoO' `OoO'o `OoO' `OoO' Oo `OoO' `OoO' `OoO' o o' oOoO' `oO
-                                                        O
-                                                        o' 0:w
+  o oo ooo oo o oo ooo oo o oo ooo oo o
 
-O   o o   O  O   o O   o O  OooO' `Ooo. O      o     o  O   o  O
-o   O O   o  o   O o   O o  O         O o      O     O  o   O  o
-`OoO' `OoO'o `OoO' `OoO' Oo `OoO' `OoO' `OoO'  o     o' oOoO'  `oO
-                                                        O
-                                                        o'
 
-,-.  .  . .   ,-.  ,    ,--,      ,-.       ;-.  .
-|  ) |  | |   |  ) |      /      /        o |  ) |
-|-<  |  | |-. |-<  |     `.  ,-. |    ;-. . |-'  |-
-|  ) |  | | | |  ) |       ) `-. \    |   | |    |
-`-'  `--` `-' `-'  `--' `-'  `-'  `-' '   ' '    `-'
+    All soFtwArez foUnD hEre aRe
+       cOntriBuTed 2 dA puBLiC doMaiN,
+    unLesS oTerwiSe deNoted bY a LiCenSe
+      fiLe.
+
+
+  YoU maY fORK, chENgE, cOnvErT, chAnGe,
+    kReATe, MaKe, ErAse, BeNd, ShApE,
+      orOthEwiZe MaNiPuLaTe, wiTH oR
+        wiTHOuT soUNd MinnD or JuDGeMenT!
+
+
+ iF YoU puShiT, wE caN pULL ut.
+   :b 🎠🎪🎢
+
