--- a/README
+++ b/README
@@ -1,3 +1,13 @@
+America is freezing and burning.
+  Do the people awake
+    or suffer total defeat.
+
+  #DeportTrump #FlagsBurning
+
+    Long live the Free
+
+  https://youtu.be/CbzgNfitXm8
+
 .       .   .   .                       .
 |       |   |   |                 o     |
 |-. . . |-. |-. | ,-. ,-. ,-. ;-. . ;-. |-
