--- a/READMe
+++ b/READMe
@@ -1,25 +1,25 @@
 
+                      🪁
  .       .   .   .                       .
- |       |   |   |                 o     |
+ |       |   |   |   SSCzDykng4g   o     |
  |-. . . |-. |-. | ,-. ,-. ,-. ;-. . ;-. |-
  | | | | | | | | | |-' `-. |   |   | | | |
- `-' `-` `-' `-' ' `-' `-' `-' '   ' |-' `-'
-
+ `-' `-` `-' `-' ' `-' `-' `-' ' 🪤' |-' `-'
+        🪻🪻🪻
    o oo ooo oo o oo ooo oo o oo ooo oo o
 
-
+                     🌱🌻🌸🍀
     All soFtwArez foUnD hEre aRe
-       cOntriBuTed 2 dA puBLiC doMaiN,
-    unLesS oTerwiSe deNoted bY a LiCenSe
-      fiLe.
+     🐒 cOntriBuTed 2 dA puBLiC doMaiN.
 
 
-  YoU maY fORK, chENgE, cOnvErT, chAnGe,
+  YoU maY🌷fORK, chENgE, cOnvErT, chAnGe,
     kReATe, MaKe, ErAse, BeNd, ShApE,
-      orOthEwiZe MaNiPuLaTe, wiTH oR
+      orOthEwiZe MaNiPuLaTe, wiTH oR 🐁
         wiTHOuT soUNd MinnD or JuDGeMenT!
 
 
-           iF YoU puShiT, wE caN pULL ut.
-             :b 🎠🎪🎢
+                         🥫U diG iT!!
+                              :b 🎠🎪🎢
+
 
