--- a/READMe
+++ b/READMe
@@ -1,6 +1,6 @@
 
                       🪁
- .       .   .   .                       .
+ .       .   .   .      `-.              .
  |       |   |   |   SSCzDykng4g   o     |
  |-. . . |-. |-. | ,-. ,-. ,-. ;-. . ;-. |-
  | | | | | | | | | |-' `-. |   |   | | | |
@@ -22,4 +22,12 @@
                          🥫U diG iT!!
                               :b 🎠🎪🎢
 
+
+
+
+  bc1q69pfua
+  q93k  g8zt
+  8wn 🐖 ns8
+  r7qj  wkq9
+  alv95zakjs
 
