--- a/READMe
+++ b/READMe
@@ -24,10 +24,23 @@
 
 
 
+                         b          c
+      bc1q69pfua          1q69pfuaq9
+      q93k  g8zt          3kg    8zt
+      8wn 🐖 ns8          8wn 🐖 ns8
+      r7qj  wkq9          r7q    jwk
+      alv95zakjs          q9alv95zak
+                         j          s
 
-  bc1q69pfua
-  q93k  g8zt
-  8wn 🐖 ns8
-  r7qj  wkq9
-  alv95zakjs
+
+               b    c1    p
+                69pfuaq93k
+                g8      zt
+               8wn  🐖  ns8
+                 r7q  jwk
+              q   9alv95   z
+                 a k  j  s
+
+
+            ** * ~ -~~- ~  * **
 
