--- a/READMe
+++ b/READMe
@@ -44,3 +44,11 @@
 
             ** * ~ -~~- ~  * **
 
+
+   bbbbqqqq     B9bambih3B
+   bb .. qq     M8      zt
+   bb '' qq     Bw  🎯  nn
+   bbbbqqqq     A8      r7
+                iwkq9alv95
+
+
