--- a/READMe
+++ b/READMe
@@ -1,54 +1,85 @@
 
-                      🪁
- .       .   .   .      `-.              .
- |       |   |   |   SSCzDykng4g   o     |
- |-. . . |-. |-. | ,-. ,-. ,-. ;-. . ;-. |-
- | | | | | | | | | |-' `-. |   |   | | | |
- `-' `-` `-' `-' ' `-' `-' `-' ' 🪤' |-' `-'
-        🪻🪻🪻
-   o oo ooo oo o oo ooo oo o oo ooo oo o
-
-                     🌱🌻🌸🍀
-    All soFtwArez foUnD hEre aRe
-     🐒 cOntriBuTed 2 dA puBLiC doMaiN.
 
 
-  YoU maY🌷fORK, chENgE, cOnvErT, chAnGe,
-    kReATe, MaKe, ErAse, BeNd, ShApE,
-      orOthEwiZe MaNiPuLaTe, wiTH oR 🐁
-        wiTHOuT soUNd MinnD or JuDGeMenT!
+       FFFFFFFFFFFFF
+       FFFFFFFFFFFFF
+       FFFF                                                               N              .
+       FFFF
+       FFFFFFFFFFFF                                                              D
+       FFFFFFFFFFFF      🪁                                     W                            .
+       FFFF                `,              W   i              A         i                 .
+       FFFF                 +.-.~`~~ b l o       n   i    d
+       FFFF                   `+.`~                g   N
+       FFFF                      `-.
+             .       .   .   .      `-.              .
+             |       |   |   |   SSCzDykng4g   o     |
+             |-. . . |-. |-. | ,-. ,-. ,-. ;-. . ;-. |-
+             | | | | | | | | | |-' `-. |   |   | | | |
+             `-' `-` `-' `-' ' `-' `-' `-' ' 🪤' |-' `-'
+                    🪻🪻🪻
+               o oo ooo oo o oo ooo oo o oo ooo oo o
+
+                                 🌱🌻🌸🍀
+                All soFtwArez foUnD hEre aRe
+                 🐒 cOntriBuTed 2 dA puBLiC doMaiN.
 
 
-                         🥫U diG iT!!
-                              :b 🎠🎪🎢
+__________.____       _____  _________  ____  __. ________  __      _________  ___________________
+\______   \    |     /  _  \ \_   ___ \|    |/ _| \_____  \/  \    /  \      \ \_   _____/\______ \
+ |    |  _/    |    /  /_\  \/    \  \/|      <    /   |   \   \/\/   /   |   \ |    __)_  |    |  \
+  |    |   \    |___/    |    \     \___|    |  \  /    |    \        /    |    \|        \ |    `   \
+   |______  /_______ \____|__  /\______  /____|__ \ \_______  /\__/\  /\____|__  /_______  //_______  /
+           \/        \/       \/        \/        \/         \/      \/         \/        \/         \/
+
+            YoU maY🌷fORK, chENgE, cOnvErT, chAnGe,
+              kReATe, MaKe, ErAse, BeNd, ShApE,
+                orOthEwiZe MaNiPuLaTe, wiTH oR 🐁
+                  wiTHOuT soUNd MinnD or JuDGeMenT!
+
+
+                                   🥫U diG iT!!
+                                        :b 🎠🎪🎢
 
 
 
-                         b          c
-      bc1q69pfua          1q69pfuaq9
-      q93k  g8zt          3kg    8zt
-      8wn 🐖 ns8          8wn 🐖 ns8
-      r7qj  wkq9          r7q    jwk
-      alv95zakjs          q9alv95zak
-                         j          s
+                                   b          c
+                bc1q69pfua          1q69pfuaq9
+                q93k  g8zt          3kg    8zt
+                8wn 🐖 ns8          8wn 🐖 ns8
+                r7qj  wkq9          r7q    jwk
+                alv95zakjs          q9alv95zak
+                                   j          s
 
 
-               b    c1    p
-                69pfuaq93k
-                g8      zt
-               8wn  🐖  ns8
-                 r7q  jwk
-              q   9alv95   z
-                 a k  j  s
+                         b    c1    p
+                          69pfuaq93k
+                          g8      zt
+                         8wn  🐖  ns8
+                           r7q  jwk
+                        q   9alv95   z
+                           a k  j  s
+                👯  👯 💃
+          H n3qQtSRmHxo🧗
+          T qQtSRmHxon3🧗
+          T tSRmHxon3qQ🧗
+          P RmHxon3qQtS🧗
+         .. Hxon3qQtSRm🧗
+         \  on3qQtSRmHx🧗
+         \\ 3qQtSRmHxon🧗
+          \ QtSRmHxon3q🧗
+     \♡/ 🤹 SRmHxon3qQt🧗
+      Y O T mHxon3qQtSR🧗
+      | U U xon3qQtSRmH🧗
+       --,B n3qQtSRmHxo🧗
+        -|      🤸
+       --'      🧘
+                      ** * ~ -~~- ~  * **
 
 
-            ** * ~ -~~- ~  * **
-
-
-   bbbbqqqq     B9bambih3B
-   bb .. qq     M8      zt
-   bb '' qq     Bw  🎯  nn
-   bbbbqqqq     A8      r7
-                iwkq9alv95
+             bbbbdddd     B9bambih3B
+             bb .. dd     M8      zt
+             pp '' qq     Bw  🎯  Mn
+             ppppqqqq     A8      A7
+                          iwkq9aliB5
 
 
