--- a/READMe
+++ b/READMe
@@ -13,12 +13,12 @@
 
 
          f
-       FFFFFFFFFFFFF
-       FFFFFFFFFFFFF
+       FFFFFFFFFFFFFB
+       FFFFF💡FFFFFFB
        FFFF                                                               N              .
-       FFFF
-       FFFFFFFFFFFF                                                              D
-       FFFFFFFFFFFF      🪁                                     W                            .
+       FF🚪  🐧🪑 🪴
+       FFFFFFFFFFFFF                                                              D
+       FFFFFFFFFFFFF     🪁                                     W                            .
        F👀F                `,              W   i              A         i                 .
        FFFF                 +.-.~`~~ b l o       n   i    d
        FFFF                   `+.`~                g   N
