--- a/READMe
+++ b/READMe
@@ -12,12 +12,12 @@
                `          ',,,'
 
 
-         f
+         fA    Doh
        FFFFFFFFFFFFFB
        FFFFF💡FFFFFFB
        FFFF                                                               N              .
        FF🚪🐒 🐧🪑 🪴
-       FFFFFFFFFFFFF                                                              D
+       FFFFFFF📖FFFF                                                              D
        FFFFFFFFFFFFF     🪁                                     W                            .
        F👀F                `,              W   i              A         i                 .
        FFFF                 +.-.~`~~ b l o       n   i    d
@@ -28,7 +28,7 @@
              |-. . . |-. |-. | ,-. ,-. ,-. ;-. . ;-. |-
              | | | | | | | | | |-' `-. |   |   | | | |
              `-' `-` `-' `-' ' `-' `-' `-' ' 🪤' |-' `-'
-                    🪻🪻🪻
+                    🪻🪻🪻        🪷
                o oo ooo oo o oo ooo oo o oo ooo oo o
 
                                  🌱🌻🌸🍀
