A biMbO biSinEss a BiMBO beTTerness, bundle bundle brick anD spunk. The deviLs due, the devil'S junk. BrainS anD brillAnce, deliverence aNd deaTh, who coUld knOw when 2 breAth thE LasT brEaTh. BuiLd liFe, seeK truth, if you knew WhAt i Know, you'd be me and id be you, so just smile, just love, just sow, amd reap, the life is good, the truth is found, but never lost, almost foUNd.

--- a/READMe
+++ b/READMe
@@ -1,4 +1,6 @@
 
+
+    COPY RiGHT BAMBi ©️ 20255, ALL RiGHTS  RESERVEDD
          ,,                           ,,--^--,,
         (  )      _                 ,' 👾      ',
          ''     ,` `,       o      /          .  \
