--- a/💖/html_parser/readme
+++ b/💖/html_parser/readme
@@ -1,5 +1,7 @@
 This is a follow along implementation of the html tokenizer described at :
 https://medium.com/@shahidahmadkhan86/making-a-tokenizer-for-html-in-c-6e90a9672a89#:~:text=A%20tokenizer%20is%20a%20component,AST%20(Abstract%20syntax%20tree).
 
+Original spurce:
+https://github.com/shahidkhan007/html-compiler
 
 
